Added in Rmd file

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,21 +5,88 @@ output:
     keep_md: true
 ---
 
+Load libraries and data file
 
-## Loading and preprocessing the data
+```{r}
+echo = TRUE
+library(ggplot2)
 
+activity <- read.csv("activity.csv", header = TRUE)
+str(activity)
+```
 
+Modify date variable
+```{r}
+activity$date <- as.Date(activity$date, format = "%Y-%m-%d")
+```
 
-## What is mean total number of steps taken per day?
+############ What is mean total number of steps taken per day? #################
 
+Calculate the total number of steps taken per day
+```{r}
+total_step <- aggregate(steps ~ date, data = activity, sum, na.rm = TRUE)
+```
 
+Make a histogram of the total number of steps taken each day
+```{r}
+hist (total_step$steps, main = "Total Number of Steps per Day", xlab = "Steps per day")
+```
 
-## What is the average daily activity pattern?
+Calculate and report the mean and median of the total number of steps taken per day
+```{r}
+mean (total_step$steps)
+median (total_step$steps)
+```
 
+############### What is the average daily activity pattern? ######################
 
+Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r}
+average_steps <- aggregate(steps ~ interval, data = activity, mean, na.rm = TRUE)
+plot (average_steps$interval, average_steps$steps, type='l', main="Average Number of Steps Taken", xlab="Intervals", ylab="Average Number of Steps")
+```
 
-## Imputing missing values
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+```{r}
+average_steps$interval[which.max(average_steps$steps)]
+```
 
+###################### Imputing missing values #############################
 
+Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r}
+sum (is.na(activity)) 
+```
 
-## Are there differences in activity patterns between weekdays and weekends?
+Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r}
+mean (activity$steps, na.rm = T)
+imputation <- activity
+for (i in average_steps$interval) {imputation[imputation$interval == i & is.na(imputation$steps), ]$steps <- average_steps$steps[average_steps$interval == i]}
+head(imputation)
+```
+
+Make a histogram of the total number of steps taken each day and calculate and report the mean and median total number of steps taken per day. 
+```{r}
+total_imputation <- aggregate(steps ~ date, data = imputation, sum, na.rm = TRUE)
+hist (total_imputation$steps, main = "Total Steps per Day - Imputation", xlab = "Steps per Day")
+mean (total_imputation$steps)
+median (total_imputation$steps)
+```
+
+######### Are there differences in activity patterns between weekdays and weekends? #########
+Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+```{r}
+imputation$weekdays <- weekdays(imputation$date)
+imputation$weeks[(imputation$weekdays == "Saturday" | imputation$weekdays == "Sunday")] <- "weekend"
+imputation$weeks[!(imputation$weekdays == "Saturday" | imputation$weekdays == "Sunday")] <- "weekdays"
+```
+
+Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis)
+```{r}
+library(plyr)
+new <- ddply(imputation, c("interval", "weeks"), function(x) apply(x[1],2, mean))
+head(new)
+library(lattice)
+xyplot(steps ~ interval | weeks, data = new, type = "l", xlab = "Interval", ylab = "Number of steps", layout = c(1, 2))
+```
